<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android1="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/steel_background_2_small" >

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:clickable="false"
        android:cursorVisible="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="none"
        android:text="@string/add_view_text"
        android:textColor="@android:color/white" >

        <requestFocus />
    </EditText>

        <RadioGroup
            android1:id="@+id/radioGroup1"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content" >

            <RadioButton
                android1:id="@+id/add_function"
                android1:layout_width="wrap_content"
                android1:layout_height="wrap_content"
                android1:checked="true"
                android1:text="@string/add_function" />

            <RadioButton
                android1:id="@+id/add_nothing"
                android1:layout_width="wrap_content"
                android1:layout_height="wrap_content"
                android1:text="@string/null_text" /> 
            
            <RadioButton
                android1:id="@+id/add_if"
                android1:layout_width="wrap_content"
                android1:layout_height="wrap_content"
                android1:text="@string/add_if" /> 
            
            <RadioButton
                android1:id="@+id/add_while"
                android1:layout_width="wrap_content"
                android1:layout_height="wrap_content"
                android1:text="@string/add_while" />
        </RadioGroup>

        <Button
            android:id="@+id/button_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_button_text" />

    </LinearLayout>
