<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/steel_background_2_small" >

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems = "10"
      	android:inputType="none"
        android:clickable="false" 
        android:cursorVisible="false" 
        android:focusable="false" 
        android:textColor="@android:color/white"
        android:focusableInTouchMode="false"
        android:background="@android:color/transparent"
        android:text="@string/choose_scripts_text" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="none"
        android:clickable="false" 
        android:cursorVisible="false" 
        android:focusable="false" 
        android:textColor="@android:color/white"
        android:focusableInTouchMode="false"
        android:background="@android:color/transparent"
        android:text="@string/player_script_text" >

        <requestFocus />
    </EditText>

    <Spinner
        android:id="@+id/choose_player_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/choose_player_r_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="none"
        android:clickable="false" 
        android:cursorVisible="false" 
        android:focusable="false" 
        android:textColor="@android:color/white"
        android:focusableInTouchMode="false"
        android:background="@android:color/transparent"
        android:text="@string/enemy_script_text" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enemy1_text" />

    <Spinner
        android:id="@+id/choose_enemy1_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/choose_enemy1_r_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enemy2_text" />

    <Spinner
        android:id="@+id/choose_enemy2_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/choose_enemy2_r_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enemy3_text" />

    <Spinner
        android:id="@+id/choose_enemy3_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/choose_enemy3_r_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/choose_done_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_text" />

    <Button
        android:id="@+id/choose_home_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_screen_text" />

</LinearLayout>