<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:columnCount="4"
    android:background="@drawable/steel_background_2_small"
    android:rowCount="2" >

    <Button
        android:id="@+id/home_quit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/quit_text" />

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/home_start_button"
        android:layout_marginTop="67dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="40sp" />

    <Button
        android:id="@+id/home_start_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/home_quit_button"
        android:layout_alignLeft="@+id/home_rnew_button"
        android:layout_marginBottom="75dp"
        android:layout_marginLeft="30dp"
        android:text="@string/start_text" />

    <Button
        android:id="@+id/home_rnew_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/home_rload_button"
        android:layout_alignBottom="@+id/home_rload_button"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="43dp"
        android:text="@string/robot_new_text" />

    <Button
        android:id="@+id/home_load_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/home_rnew_button"
        android:layout_marginBottom="45dp"
        android:layout_marginLeft="17dp"
        android:layout_toRightOf="@+id/home_rnew_button"
        android:text="@string/edit_scripts_text" />

    <Button
        android:id="@+id/home_create_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/home_load_button"
        android:layout_alignBottom="@+id/home_load_button"
        android:layout_alignLeft="@+id/home_rnew_button"
        android:gravity="center"
        android:text="@string/create_script_text" />

    <Button
        android:id="@+id/home_rload_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/home_start_button"
        android:layout_alignRight="@+id/home_load_button"
        android:layout_marginBottom="40dp"
        android:text="@string/robot_load_text" />

</RelativeLayout>