<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/steel_background_2_small" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/booleantitletext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:clickable="false"
            android:cursorVisible="false"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="textMultiLine"
            android:text="@string/add_statement"
            android:textColor="@android:color/white" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/booleandonebutton"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/done_text" />

    </LinearLayout>

    <EditText
        android:id="@+id/valuetext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:clickable="false"
        android:cursorVisible="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="textMultiLine"
        android:text="@string/value_text"
        android:textColor="@android:color/white" />

    <Spinner
        android:id="@+id/booleanvaluespinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/booleanoperatortext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:clickable="false"
        android:cursorVisible="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="textMultiLine"
        android:text="@string/operator_text"
        android:textColor="@android:color/white"  />

    <Spinner
        android:id="@+id/booleanoperatorspinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/booleannumbertext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:clickable="false"
        android:cursorVisible="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="textMultiLine"
        android:text="@string/number_text"
        android:textColor="@android:color/white"  />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/booleannumberinputtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
	        android:clickable="false"
	        android:cursorVisible="false"
	        android:ems="10"
	        android:focusable="false"
	        android:focusableInTouchMode="false"
	        android:inputType="textMultiLine"
	        android:text="@string/enter_number_text"
	        android:textColor="@android:color/white"	/>

        <EditText
            android:id="@+id/booleannumberinput"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />

    </LinearLayout>

    <Spinner
        android:id="@+id/arenaCoordsSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/useNumberCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usenumber_text" />

</LinearLayout>